# APython

./: .gitignore  Host-App communication.md  LICENSE  PythonHost-PythonApp communication.md  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/launcher/: APythonDev.java  APythonDev.kt
app/src/main/: AndroidManifest.xml
app/src/main/jni/: Application.mk  CMakeLists.txt
app/src/main/jni/Application/: Android.mk  CMakeLists.txt  application.c  application.h  main.c  main.h
app/src/main/jni/BZip/: Android.mk
app/src/main/jni/FFI/: Android.mk  ffi.h  fficonfig.h
app/src/main/jni/IPC/: Android.mk  CMakeLists.txt  ipc.c  ipc.h
app/src/main/jni/Interpreter/: Android.mk  CMakeLists.txt  interpreter.c  interpreter.h  py_compatibility.c  py_compatibility.h  py_utils.c  py_utils.h  readline.c  readline.h  terminal.c  terminal.h  util.c  util.h
app/src/main/jni/Log/: Android.mk  CMakeLists.txt  log.c  log.h
app/src/main/jni/OpenSSL/: Android.mk  buildinf.h
app/src/main/jni/Python/: Android.mk  config.c  pyconfig.h
app/src/main/jni/Python3.4.3/: Android.mk  config.c  pyconfig.h
app/src/main/jni/PythonExecutable/: Android.mk  CMakeLists.txt  main.c  main.h
app/src/main/jni/PythonPatch/: Android.mk  redirects.c  redirects.h
app/src/main/res/anim/: python_version_list_collaps_info.xml  python_version_list_expand_info.xml
app/src/main/res/drawable/: downloading_icon.xml
app/src/main/res/layout/: activity_main.xml  main_menu.xml  (+13 more)
gradle/wrapper/: gradle-wrapper.properties
(+111 files in other folders)
